--- a/video4fuze.desktop
+++ b/video4fuze.desktop
@@ -2,10 +2,10 @@
 Name=video4fuze
 Comment=Convert videos and images for visualization in your sansa fuze
 Comment[es]=Convierte imágenes y vídeos para verlos en tu sansa fuze
-Comment[ca]=Converrteix imatges i vídeos per veure'ls al teu sansa fuze
+Comment[ca]=Converteix imatges i vídeos per veure'ls al teu sansa fuze
 Exec=/usr/bin/video4fuze
 Terminal=false
 Type=Application
-Icon=/usr/share/pixmaps/blackfuze.png
+Icon=/usr/share/pixmaps/sansa_fuze_v2.svg
 Categories=Application;Multimedia
 StartupNotify=true
